# ffthemeloader

./: .gitignore  README.md  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
